toolchains/eui-compiler/tests/error/baselines/Invalid-characters-in-closing-tag/expect.txt
Error: Invalid characters in closing tag
</e:Skin a>
         ^
at line: 6, column: 10
at file: